some changes adding an sms consent page

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 REACT_APP_GHL_WEBHOOK_URL=https://services.leadconnectorhq.com/hooks/CoR52qvOFTJ0YgrhEFbe/webhook-trigger/f209d814-b436-4fad-9c89-2ae4a3cb098c
+
+# Disable source maps to suppress @daily-co/daily-react warnings
+GENERATE_SOURCEMAP=false
